# RealEngine

./: .gitignore  CMakeBuildShaders.cmake  CMakeGlobalMacros.cmake  CMakeLists.txt  CMakeSettings.json  README.md  commandArgs.cpp  commandArgs.hpp  main.cpp  program.cpp  program.hpp  utils.cpp  utils.hpp  vulkanConfiguration.cpp  vulkanConfiguration.hpp
headers/: animation.hpp  camera.hpp  commandArgs.hpp  config.hpp  entityComponent.hpp  input.hpp  jsonParsing.hpp  light.hpp  material.hpp  mesh.hpp  mode.hpp  parameters.hpp  playMode.hpp  program.hpp  scene.hpp  vertexIndex.hpp  vulkanConfiguration.hpp  vulkanCore.hpp
shaders/: compile.bat  triTestVert.spv
shaders/glsl/: debugColor.frag  dotLighting.frag  triBufferMatrix.vert  triBufferSimple.vert  triBufferTextured.frag  triBufferTexturedMatrix.vert  triTest.vert
source/: camera.cpp  commandArgs.cpp  config.cpp  embeddedShaders.cpp  entityComponent.cpp  input.cpp  jsonParsing.cpp  main.cpp  mesh.cpp  mode.cpp  playMode.cpp  program.cpp  scene.cpp  utils.cpp  vertexIndex.cpp  vulkanConfiguration.cpp  vulkanCore.cpp  vulkanMemory.cpp
test/: output.cpp
